后台微信配置操作

--- a/public/themes/admin/default/admin/login.html
+++ b/public/themes/admin/default/admin/login.html
@@ -72,7 +72,7 @@
     var GV = {
         ROOT: "__ROOT__/",
         WEB_ROOT: "__WEB_ROOT__/",
-        JS_ROOT: "static/js/",
+        JS_ROOT: "public/static/js/",
         APP: ''/*当前应用名*/
     };
 </script>
