--- a/public/themes/admin/default/admin/setting/site.html
+++ b/public/themes/admin/default/admin/setting/site.html
@@ -4,11 +4,12 @@
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
         <li class="active"><a href="#A" data-toggle="tab">{:lang('WEB_SITE_INFOS')}</a></li>
-        <li><a href="#B" data-toggle="tab">{:lang('SEO_SETTING')}</a></li>
+        <li><a href="#B" data-toggle="tab">{:lang('WECHAT_SETTING')}</a></li>
+        <li><a href="#C" data-toggle="tab">{:lang('SEO_SETTING')}</a></li>
         <!--<li><a href="#C" data-toggle="tab">{:lang('URL_SETTING')}</a></li>-->
         <!--<li><a href="#E" data-toggle="tab">{:lang('COMMENT_SETTING')}</a></li>-->
-        <li><a href="#F" data-toggle="tab">用户注册设置</a></li>
-        <li><a href="#G" data-toggle="tab">CDN设置</a></li>
+        <!-- <li><a href="#F" data-toggle="tab">用户注册设置</a></li> -->
+        <!-- <li><a href="#G" data-toggle="tab">CDN设置</a></li> -->
     </ul>
     <form class="form-horizontal js-ajax-form margin-top-20" role="form" action="{:url('setting/sitePost')}"
           method="post">
@@ -129,6 +130,47 @@
                     </div>
                     <div class="tab-pane" id="B">
                         <div class="form-group">
+                            <label for="input-site_wechat_appid" class="col-sm-2 control-label"><span
+                                    class="form-required">*</span>{:lang('WECHAT_APPID')}</label>
+                            <div class="col-md-6 col-sm-10">
+                                <input type="text" class="form-control" id="input-site_wechat_appid"
+                                       name="options[site_wechat_appid]" value="{$site_info.site_wechat_appid|default=''}">
+                                <p class="help-block">{:lang('WECHAT_APPID_HELP')}</p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="input-site_wechat_appsecret" class="col-sm-2 control-label"><span
+                                    class="form-required">*</span>{:lang('WECHAT_APPSECRET')}</label>
+                            <div class="col-md-6 col-sm-10">
+                                <input type="text" class="form-control" id="input-site_wechat_appsecret"
+                                       name="options[site_wechat_appsecret]" value="{$site_info.site_wechat_appsecret|default=''}">
+                                <p class="help-block">{:lang('WECHAT_APPSECRET_HELP')}</p>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="input-site_wechat_token" class="col-sm-2 control-label">{:lang('WECHAT_TOKEN')}</label>
+                            <div class="col-md-6 col-sm-10">
+                                <input type="text" class="form-control" id="input-site_wechat_token"
+                                       name="options[site_wechat_token]" value="{$site_info.site_wechat_token|default=''}">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="input-site_wechat_encodingaeskey" class="col-sm-2 control-label">{:lang('WECHAT_ENCODINGAESKEY')}</label>
+                            <div class="col-md-6 col-sm-10">
+                                <input type="text" class="form-control" id="input-site_wechat_encodingaeskey"
+                                       name="options[site_wechat_encodingaeskey]" value="{$site_info.site_wechat_encodingaeskey|default=''}">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-primary js-ajax-submit" data-refresh="0">
+                                    {:lang('SAVE')}
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tab-pane" id="C">
+                        <div class="form-group">
                             <label for="input-site_seo_title" class="col-sm-2 control-label">{:lang('WEBSITE_SEO_TITLE')}</label>
                             <div class="col-md-6 col-sm-10">
                                 <input type="text" class="form-control" id="input-site_seo_title"
@@ -157,7 +199,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tab-pane" id="F">
+                    <!-- <div class="tab-pane" id="F">
                         <div class="form-group">
                             <label for="input-banned_usernames" class="col-sm-2 control-label">用户注册验证</label>
                             <div class="col-md-6 col-sm-10">
@@ -184,8 +226,8 @@
                                 </button>
                             </div>
                         </div>
-                    </div>
-                    <div class="tab-pane" id="G">
+                    </div> -->
+                    <!-- <div class="tab-pane" id="G">
                         <div class="form-group">
                             <label for="input-cdn_static_root" class="col-sm-2 control-label">静态资源cdn地址</label>
                             <div class="col-md-6 col-sm-10">
@@ -210,7 +252,7 @@
                                 </button>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </fieldset>
