--- a/public/themes/mobile/default/public/footer.html
+++ b/public/themes/mobile/default/public/footer.html
@@ -1,37 +1,16 @@
-<br>
 <!-- Footer ================================================== -->
-<hr>
-<div id="footer">
-    <hook name="footer_start"/>
-    <div class="links">
-        <links>
-            <a href="{$vo.url|default=''}" target="{$vo.target|default=''}">{$vo.name|default=''}</a>&nbsp;
-        </links>
+<footer id="footer">
+	
+	<nav class="mui-bar mui-bar-tab">
+		<a class="mui-tab-item mui-active" href="#tabbar">
+			<span class="mui-tab-label">首页</span>
+		</a>
+		<a class="mui-tab-item" href="#tabbar-with-chat">
+			<span class="mui-tab-label">关于我们</span>
+		</a>
+		<a class="mui-tab-item" href="#tabbar-with-contact">
+			<span class="mui-tab-label">邀请</span>
+		</a>
+	</nav>
 
-    </div>
-    <p>
-        Made by <a href="http://www.thinkcmf.com" target="_blank">ThinkCMF</a>
-        Code licensed under the
-        <a href="http://www.apache.org/licenses/LICENSE-2.0" rel="nofollow" target="_blank">Apache License v2.0</a>.
-        <br/>
-        Based on
-        <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>.
-        Icons from
-        <a href="http://fortawesome.github.com/Font-Awesome/" target="_blank">Font Awesome</a>
-        <br>
-        <notempty name="site_info.site_icp">
-            <a href="http://www.miitbeian.gov.cn/" target="_blank">{$site_info.site_icp}</a>
-            <else/>
-        </notempty>
-        <notempty name="site_info.site_gwa">
-            <img src="__TMPL__/public/assets/images/ghs.png">
-            <a href="http://beian.gov.cn/" target="_blank">{$site_info.site_gwa}</a>
-            <else/>
-        </notempty>
-
-
-    </p>
-</div>
-<div id="backtotop">
-    <i class="fa fa-arrow-circle-up"></i>
-</div>
+</footer>
