--- a/public/themes/mobile/default/public/head.html
+++ b/public/themes/mobile/default/public/head.html
@@ -17,13 +17,13 @@
 <![endif]-->
 <link rel="icon" href="__TMPL__/public/assets/images/favicon.png" type="image/png">
 <link rel="shortcut icon" href="__TMPL__/public/assets/images/favicon.png" type="image/png">
-<link href="__TMPL__/public/assets/simpleboot3/themes/simpleboot3/bootstrap.min.css" rel="stylesheet">
-<link href="__TMPL__/public/assets/simpleboot3/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet"
-      type="text/css">
+<link href="__STATIC__/mui/css/mui.min.css" rel="stylesheet" type="text/css">
 <!--[if IE 7]>
 <link rel="stylesheet" href="__TMPL__/public/assets/simpleboot3/font-awesome/4.4.0/css/font-awesome-ie7.min.css">
 <![endif]-->
 <link href="__TMPL__/public/assets/css/style.css" rel="stylesheet">
+<link href="__TMPL__/public/assets/css/mobile.css" rel="stylesheet">
+
 <style>
     /*html{filter:progid:DXImageTransform.Microsoft.BasicImage(grayscale=1);-webkit-filter: grayscale(1);}*/
     #backtotop {
@@ -49,10 +49,9 @@
     var GV = {
         ROOT: "__ROOT__/",
         WEB_ROOT: "__WEB_ROOT__/",
-        JS_ROOT: "static/js/"
+        JS_ROOT: "public/static/js/"
     };
 </script>
 <script src="__TMPL__/public/assets/js/jquery-1.10.2.min.js"></script>
-<script src="__TMPL__/public/assets/js/jquery-migrate-1.2.1.js"></script>
-<script src="__STATIC__/js/wind.js"></script>
+<script src="__STATIC__/mui/js/mui.min.js"></script>
 	
