--- a/public/themes/admin/default/admin/theme/install.html
+++ b/public/themes/admin/default/admin/theme/install.html
@@ -34,7 +34,7 @@
                     <td>{$vo.author}</td>
                     <td>{$vo.description}</td>
                     <td>
-                        <a href="{:url('theme/installTheme',array('theme'=>$vo['theme']))}" class="js-ajax-dialog-btn">安装</a>
+                        <a href="{:url('theme/installTheme',array('theme'=>$vo['theme'], 'name'=>$vo['name']))}" class="js-ajax-dialog-btn">安装</a>
                     </td>
                 </tr>
             </foreach>
