--- a/public/themes/mobile/default/public/footer.html
+++ b/public/themes/mobile/default/public/footer.html
@@ -2,7 +2,7 @@
 <footer id="footer">
 	
 	<nav class="mui-bar mui-bar-tab">
-		<a class="mui-tab-item mui-active" href="#tabbar">
+		<a class="mui-tab-item" href="#tabbar">
 			<span class="mui-tab-label">首页</span>
 		</a>
 		<a class="mui-tab-item" href="#tabbar-with-chat">
