--- a/public/themes/admin/default/admin/nav_menu/add.html
+++ b/public/themes/admin/default/admin/nav_menu/add.html
@@ -56,6 +56,20 @@
                 </div>
             </div>
             <div class="form-group">
+                <label for="input-description" class="col-sm-2 control-label">缩略图</label>
+                <div class="col-md-6 col-sm-10">
+                    <input type="hidden" name="image" class="form-control"
+                           id="js-thumbnail-input">
+                    <div>
+                        <a href="javascript:uploadOneImage('图片上传','#js-thumbnail-input');">
+                            <img src="__TMPL__/public/assets/images/default-thumbnail.png"
+                                 id="js-thumbnail-input-preview"
+                                 width="135" style="cursor: pointer"/>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
                 <label class="col-sm-2 control-label">显示:</label>
                 <div class="col-md-6 col-sm-10">
                     <select name="status" class="form-control">
