--- a/public/themes/admin/default/portal/admin_article/add_card.html
+++ b/public/themes/admin/default/portal/admin_article/add_card.html
@@ -29,8 +29,8 @@
 <body>
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li><a href="{:url('AdminArticle/coles', array('category' => $category, 'type'=> $postType))}">所有兑换商品</a></li>
-        <li class="active"><a href="{:url('AdminArticle/add_coles', array('category' => $category, 'type'=> $postType))}">添加兑换商品</a></li>
+        <li><a href="{:url('AdminArticle/card', array('category' => $category, 'type'=> 7))}">所有合作商家</a></li>
+        <li class="active"><a href="{:url('AdminArticle/add_card', array('category' => $category, 'type'=> 7))}">添加合作商家</a></li>
     </ul>
     <form action="{:url('AdminArticle/addPost')}" method="post" class="form-horizontal js-ajax-form margin-top-20">
         <div class="row">
@@ -44,31 +44,35 @@
                                    readonly/>
                             <input class="form-control" type="hidden" value="{$category}"
                                    name="post[categories]"/>
-                            <input class="form-control" type="hidden" value="coles"
+                            <input class="form-control" type="hidden" value="card"
                                    name="post[type]"/>
-                            <input class="form-control" type="hidden" value="3"
+                            <input class="form-control" type="hidden" value="{$postType}"
                                    name="post[post_type]"/>
                         </td>
                     </tr>
                     <tr>
-                        <th>商品名称<span class="form-required">*</span></th>
+                        <th>商家名称<span class="form-required">*</span></th>
                         <td>
                             <input class="form-control" type="text" name="post[post_title]"
-                                   id="title" required value="" placeholder="请输入商品名称"/>
+                                   id="title" required value="" placeholder="请输入商家名称"/>
                         </td>
                     </tr>
                     <tr>
-                        <th>商品数量</th>
+                        <th>优惠政策<span class="form-required">*</span></th>
                         <td>
-                            <input class="form-control" type="number" name="post[quantity]" id="quantity"  min="0" value="" style="width:120px;">
-                            <p class="help-block">商品数量为0时，表示该商品不限数量</p>
+                            <input class="form-control" type="text" name="post[more][preferential]"
+                                   id="title" required value="" placeholder="请输入商家优惠政策"/>
                         </td>
                     </tr>
                     <tr>
-                        <th>兑换积分</th>
+                        <th>商家地点</th>
                         <td>
-                            <input class="form-control" type="number" name="post[score]" id="score"  min="0" value=""  style="width:120px;">
-                            <p class="help-block">兑换积分为0时，表示该商品免费兑换</p>
+                            <div style="display: inline-block;">
+                                <input class="form-control" type="text" id="address" name="post[more][address]" style="width:500px;" required
+                                   value="" placeholder="详细地址" 
+                                   readonly/>
+                            </div>
+                            <a href="javascript:parent.openIframeLayer('{:url('AdminArticle/location')}','活动地址',{area: ['35%', '70%'], btn:['确认','关闭'], yes: function(index) {setLocation(index);}});" class="btn btn-default" style="position: relative; top: -3px; left: 45px;">获取商家地点</a>
                         </td>
                     </tr>
                     <tr>
@@ -83,15 +87,6 @@
                             <ul id="photos" class="pic-list list-unstyled form-inline"></ul>
                             <a href="javascript:uploadMultiImage('图片上传','#photos','photos-item-tpl');"
                                class="btn btn-default btn-sm">选择图片</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th>附件</th>
-                        <td>
-                            <ul id="files" class="pic-list list-unstyled form-inline">
-                            </ul>
-                            <a href="javascript:uploadMultiFile('附件上传','#files','files-item-tpl','file');"
-                               class="btn btn-sm btn-default">选择文件</a>
                         </td>
                     </tr>
                 </table>
@@ -193,6 +188,15 @@
                 layer.close(index); //如果设定了yes回调，需进行手工关闭
             }
         });
+    }
+
+    function setLocation(index) {
+        //当点击‘确定’按钮的时候，获取弹出层返回的值
+        var res = parent.window["layui-layer-iframe" + index].callbackdata();
+
+        $('#address').val(res.poiaddress+res.poiname);
+
+        parent.layer.close(index);
     }
 </script>
 </body>
