--- a/public/themes/admin/default/portal/admin_article/card.html
+++ b/public/themes/admin/default/portal/admin_article/card.html
@@ -3,8 +3,8 @@
 <body>
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li class="active"><a href="javascript:;">所有兑换商品</a></li>
-        <li><a href="{:url('AdminArticle/add_coles', array('category' => $category, 'type' => $postType))}">添加兑换商品</a></li>
+        <li class="active"><a href="javascript:;">所有合作商家</a></li>
+        <li><a href="{:url('AdminArticle/add_card', array('category' => $category, 'type' => $postType))}">添加合作商家</a></li>
     </ul>
     <form class="well form-inline margin-top-20" method="post" action="{:url('AdminArticle/coles')}">
         时间:
@@ -19,6 +19,66 @@
                value="{$keyword|default=''}" placeholder="请输入关键字...">
         <input type="submit" class="btn btn-primary" value="搜索"/>
         <a class="btn btn-danger" href="{:url('AdminArticle/coles')}">清空</a>
+    </form>
+    <form class="well form-inline margin-top-20 js-ajax-form" action="" method="post">
+        <table class="table table-hover table-bordered table-list">
+            <thead>
+            <tr>
+                <th width="50">ID</th>
+                <th>名称</th>
+                <th width="160">缩略图</th>
+                <th width="130">更新时间</th>
+                <th width="130">发布时间</th>
+                <th width="70">状态</th>
+                <th width="90">操作</th>
+            </tr>
+            </thead>
+            <foreach name="card" item="vo">
+                <tr>
+                    <td><b>{$vo.id}</b></td>
+                    <td>
+                        <notempty name="category">
+                            <a href="{:cmf_url('portal/Article/index',array('id'=>$vo['id'],'cid'=>$vo['category_id']))}"
+                               target="_blank">{$vo.post_title}</a>
+                            <else/>
+                            <a href="{:cmf_url('portal/Article/index',array('id'=>$vo['id']))}"
+                               target="_blank">{$vo.post_title}</a>
+                        </notempty>
+                    </td>
+                    <td>
+                        <notempty name="vo.more.thumbnail">
+                            <a href="javascript:parent.imagePreviewDialog('{:cmf_get_image_preview_url($vo.more.thumbnail)}');">
+                                <i class="fa fa-photo fa-fw"></i>
+                            </a>
+                        </notempty>
+                    </td>
+                    <td>
+                        <notempty name="vo.update_time">
+                            {:date('Y-m-d H:i',$vo['update_time'])}
+                        </notempty>
+
+                    </td>
+                    <td>
+                        <empty name="vo.published_time">
+                            未发布
+                            <else/>
+                            {:date('Y-m-d H:i',$vo['published_time'])}
+                        </empty>
+
+                    </td>
+                    <td>
+                        <notempty name="vo.post_status">
+                            <a data-toggle="tooltip" title="已发布"><i class="fa fa-check"></i></a>
+                            <else/>
+                            <a data-toggle="tooltip" title="未发布"><i class="fa fa-close"></i></a>
+                        </notempty>
+                    </td>
+                    <td>
+                        <a href="{:url('AdminArticle/edit_card',array('id'=>$vo['id']))}">{:lang('EDIT')}</a>
+                    </td>
+                </tr>
+            </foreach>
+        </table>
     </form>
     <form class="js-ajax-form" action="" method="post">
         <div class="table-actions">
@@ -68,9 +128,8 @@
                     <th width="50">{:lang('SORT')}</th>
                 </notempty>
                 <th width="50">ID</th>
-                <th>商品名称</th>
-                <th width="90">商品数量</th>
-                <th width="90">兑换积分</th>
+                <th>商家名称</th>
+                <th width="150">优惠政策</th>
                 <th width="65">点击量</th>
                 <th width="160">缩略图</th>
                 <th width="130">更新时间</th>
@@ -101,8 +160,7 @@
                                target="_blank">{$vo.post_title}</a>
                         </notempty>
                     </td>
-                    <td>{$vo.quantity|default=0}</td>
-                    <td>{$vo.score|default=0}</td>
+                    <td>{$vo.more.preferential}</td>
                     <td>{$vo.post_hits|default=0}</td>
                     <td>
                         <notempty name="vo.more.thumbnail">
@@ -143,7 +201,7 @@
                         </notempty>
                     </td>
                     <td>
-                        <a href="{:url('AdminArticle/edit_coles',array('id'=>$vo['id']))}">{:lang('EDIT')}</a>
+                        <a href="{:url('AdminArticle/edit_card',array('id'=>$vo['id']))}">{:lang('EDIT')}</a>
                         <a href="{:url('AdminArticle/delete',array('id'=>$vo['id']))}" class="js-ajax-delete">{:lang('DELETE')}</a>
                     </td>
                 </tr>
@@ -159,9 +217,8 @@
                     <th width="50">{:lang('SORT')}</th>
                 </notempty>
                 <th width="50">ID</th>
-                <th>商品名称</th>
-                <th width="90">商品数量</th>
-                <th width="90">兑换积分</th>
+                <th>商家名称</th>
+                <th width="90">优惠政策</th>
                 <th width="65">点击量</th>
                 <th width="160">缩略图</th>
                 <th width="130">更新时间</th>
