--- a/public/themes/admin/default/portal/admin_article/track.html
+++ b/public/themes/admin/default/portal/admin_article/track.html
@@ -3,10 +3,10 @@
 <body>
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li class="active"><a href="javascript:;">所有兑换商品</a></li>
-        <li><a href="{:url('AdminArticle/add_coles', array('category' => $category, 'type' => $postType))}">添加兑换商品</a></li>
+        <li class="active"><a href="javascript:;">所有足迹活动</a></li>
+        <li><a href="{:url('AdminArticle/add_track', array('category' => $category, 'type'=> $postType))}">添加足迹活动</a></li>
     </ul>
-    <form class="well form-inline margin-top-20" method="post" action="{:url('AdminArticle/coles')}">
+    <form class="well form-inline margin-top-20" method="post" action="{:url('AdminArticle/track')}">
         时间:
         <input type="text" class="form-control js-bootstrap-datetime" name="start_time"
                value="{$start_time|default=''}"
@@ -18,7 +18,7 @@
         <input type="text" class="form-control" name="keyword" style="width: 200px;"
                value="{$keyword|default=''}" placeholder="请输入关键字...">
         <input type="submit" class="btn btn-primary" value="搜索"/>
-        <a class="btn btn-danger" href="{:url('AdminArticle/coles')}">清空</a>
+        <a class="btn btn-danger" href="{:url('AdminArticle/track')}">清空</a>
     </form>
     <form class="js-ajax-form" action="" method="post">
         <div class="table-actions">
@@ -68,10 +68,11 @@
                     <th width="50">{:lang('SORT')}</th>
                 </notempty>
                 <th width="50">ID</th>
-                <th>商品名称</th>
-                <th width="90">商品数量</th>
-                <th width="90">兑换积分</th>
-                <th width="65">点击量</th>
+                <th>活动名称</th>
+                <th width="100">活动日期</th>
+                <th width="100">活动时间</th>
+                <!--  -->
+                <th width="90">可获取积分</th>
                 <th width="160">缩略图</th>
                 <th width="130">更新时间</th>
                 <th width="130">发布时间</th>
@@ -101,9 +102,9 @@
                                target="_blank">{$vo.post_title}</a>
                         </notempty>
                     </td>
-                    <td>{$vo.quantity|default=0}</td>
+                    <td>{$vo.more.active_date}</td>
+                    <td>{$vo.more.start_time}~{$vo.more.end_time}</td>
                     <td>{$vo.score|default=0}</td>
-                    <td>{$vo.post_hits|default=0}</td>
                     <td>
                         <notempty name="vo.more.thumbnail">
                             <a href="javascript:parent.imagePreviewDialog('{:cmf_get_image_preview_url($vo.more.thumbnail)}');">
@@ -143,7 +144,7 @@
                         </notempty>
                     </td>
                     <td>
-                        <a href="{:url('AdminArticle/edit_coles',array('id'=>$vo['id']))}">{:lang('EDIT')}</a>
+                        <a href="{:url('AdminArticle/edit_track',array('id'=>$vo['id']))}">{:lang('EDIT')}</a>
                         <a href="{:url('AdminArticle/delete',array('id'=>$vo['id']))}" class="js-ajax-delete">{:lang('DELETE')}</a>
                     </td>
                 </tr>
@@ -159,10 +160,11 @@
                     <th width="50">{:lang('SORT')}</th>
                 </notempty>
                 <th width="50">ID</th>
-                <th>商品名称</th>
-                <th width="90">商品数量</th>
-                <th width="90">兑换积分</th>
-                <th width="65">点击量</th>
+                <th>活动名称</th>
+                <th width="100">活动日期</th>
+                <th width="100">活动时间</th>
+                <!--  -->
+                <th width="90">可获取积分</th>
                 <th width="160">缩略图</th>
                 <th width="130">更新时间</th>
                 <th width="130">发布时间</th>
