爱的记忆模块，爱的足迹模块

--- a/public/themes/admin/default/portal/admin_article/add_dynamic.html
+++ b/public/themes/admin/default/portal/admin_article/add_dynamic.html
@@ -83,6 +83,12 @@
                         </td>
                     </tr>
                     <tr>
+                        <th>内容</th>
+                        <td>
+                            <script type="text/plain" id="content" name="post[post_content]"></script>
+                        </td>
+                    </tr>
+                    <tr>
                         <th>相册</th>
                         <td>
                             <ul id="photos" class="pic-list list-unstyled form-inline"></ul>
