--- a/public/themes/admin/default/portal/admin_article/add_track.html
+++ b/public/themes/admin/default/portal/admin_article/add_track.html
@@ -60,16 +60,16 @@
                     <tr>
                         <th>活动日期<span class="form-required">*</span></th>
                         <td>
-                           <input class="form-control js-bootstrap-date" type="text" name="post[more][active_date]" style="width:300px;"
+                           <input class="form-control js-bootstrap-date" type="text" name="post[active_date]" style="width:300px;"
                                    id="title" required value="" placeholder="活动日期"/>
                         </td>
                     </tr>
                     <tr>
                         <th>活动时间<span class="form-required">*</span></th>
                         <td>
-                            <input class="form-control js-bootstrap-time" type="text" name="post[more][start_time]" style="display:inline-block; width:300px;"
+                            <input class="form-control js-bootstrap-time" type="text" name="post[active_start_time]" style="display:inline-block; width:300px;"
                                    id="title" required value="" placeholder="活动开始时间"/>&nbsp;&nbsp;--&nbsp;&nbsp;
-                            <input class="form-control js-bootstrap-time" type="text" name="post[more][end_time]" style="display:inline-block; width:300px;"
+                            <input class="form-control js-bootstrap-time" type="text" name="post[active_end_time]" style="display:inline-block; width:300px;"
                                    id="title" required value="" placeholder="活动结束时间"/>
                         </td>
                     </tr>
